optimized the text embedding process

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "name": "query",
             "request": "launch",
             "type": "dart",
-            "args": ["query", "hello sir how you doing?"]
+            "args": ["query", "next steps"]
         }
     ]
 }
