--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  murmur3: ^2.1.0
+  collection: ^1.19.1
   # path: ^1.8.0
 
 dev_dependencies:
